a1/brendan_gordon/TEST_PROGRAMS/invalidtype/anderson_santossilva/ifExpFloat.min
if (3.5) then 
	print 3.5;
endif

